--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -393,16 +393,25 @@ header .navbar {
 }
 
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/slide_01.jpg);
+	background-image: url(../images/main.jpg);
 }
 
 .Modern-Slider .item-2 .img-fill {
-	background-image: url(../images/slide_02.jpg);
+	background-image: url(../images/seguridad.jpg);
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/custodias.jpg);
 }
+
+.Modern-Slider .item-4 .img-fill {
+	background-image: url(../images/flotilla.jpg);
+}
+
+.Modern-Slider .item-5 .img-fill {
+	background-image: url(../images/soporte.jpg);
+}
+
 
 .Modern-Slider .NextArrow{
   position:absolute;
@@ -713,7 +722,7 @@ ul.slick-dots {
 }
 .testimonial-item .inner-content {
 	text-align: center;
-	background-color: #fff;	
+	background-color: rgb(255, 255, 255);	
 	padding: 30px;
 	border-radius: 5px;
 }
@@ -1072,6 +1081,35 @@ footer .contact-form button.filled-button:hover {
 .page-heading {
 	text-align: center;
 	background-image: url(../images/page-heading-bg.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+}
+.page-heading1 {
+	text-align: center;
+	background-image: url(../images/page-heading-bg1.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+}
+
+.page-heading2 {
+	text-align: center;
+	background-image: url(../images/page-heading-bg2.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+}
+
+.page-heading3 {
+	text-align: center;
+	background-image: url(../images/page-heading-bg3.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
